Thu Aug 31 11:41:00 BST 2000 Olly Betts

	* Window size for NEAR and PHRASE now defaults to number of
	  subqueries.

	* NEAR and PHRASE can now be built with OmQuery pair constructor.

Thu Aug 31 13:29:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* OmIndexer type-checking now seems to work.

Thu Aug 31 12:20:27 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added checking for hstrerror in -lresolv (needed by Solaris)

	* Added HAVE_LIBXML define

	* indexer/indexgraph/ now built if libxml is found

	* indexer/indexgraph/ skipped from includetest (since it can't find
	  parser.h)

	* stemtest.pl will skip checking with the random data/text if
	  $OM_STEMTEST_SKIP_RANDOM is set.

Thu Aug 31 11:41:00 BST 2000 Olly Betts

	* Updated TODO.

Thu Aug 31 11:29:00 BST 2000 Olly Betts

	* Removed strange special case which allows assignment of an
	  OmWritableDatabase to an OmDatabase which is actually a reference
	  to an OmWritableDatabase.

	* Make OmWritableDatabase::get_document() into a const method in the
	  code as well as the header.

	* Added database assignment test.

Wed Aug 30 19:15:29 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Partially implemented type-checking in OmIndexer

Wed Aug 30 18:21:02 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a test to the quartz testsuite - currently doesn't compile.

Wed Aug 30 17:50:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make OmWritableDatabase::get_document() into a const method -
	  doesn't change anything.

Wed Aug 30 15:10:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Put guards in indexergraph header file to make it empty if
	  libxml is not available.  (For includetest)

Wed Aug 30 15:10:00 BST 2000 Olly Betts

	* Added guards to sleepycat headers so that they are empty if
	  sleepycat is disabled - this is to make includetest pass.

Wed Aug 30 14:49:00 BST 2000 Olly Betts
