@@ -1,3 +1,7 @@
+Thu Aug 31 15:36:00 BST 2000 Olly Betts
+
+	* Should now distribute NEAR/PHRASE over sub-expressions - untested.
+
 Thu Aug 31 11:41:00 BST 2000 Olly Betts
 
 	* Window size for NEAR and PHRASE now defaults to number of
